--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="丘丘人.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
       async
@@ -16,8 +17,7 @@
 
       gtag("config", "G-DTC37W3H4L");
     </script>
-    <script src="https://storage.ko-fi.com/cdn/widget/Widget_2.js"></script>
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <!-- <script src="https://storage.ko-fi.com/cdn/widget/Widget_2.js"></script> -->
   </head>
 
   <body>
